# MindAI

./: .gitignore  COLAB_SETUP.md  LICENSE  README.md  check_memory.py  colab_server.ipynb  download_corpus.py  main.py  main_agent.py  pyproject.toml  requirements-webgui.txt  server.py  server_setup.bat
config/: default_sim.yaml
mindai/: __init__.py  brain.py  layout.py
mindai/architecture/: amygdala.py  anterior_cingulate.py  astrocytes.py  biological_motion_detector.py  cerebellum.py  cortical_areas.py  cortical_layers.py  default_mode_network.py  entorhinal.py  habenula.py  hippocampus_buffer.py  hippocampus_subfields.py  insula.py  olfactory_bulb.py  pag.py  predictive_hierarchy.py  prefrontal_cortex.py  semantic_memory.py  superior_colliculus.py  thalamocortical_core.py  theory_of_mind.py  visuospatial_sketchpad.py
mindai/consciousness/: global_workspace.py  neural_complexity.py  self_model_ego.py  volition_and_agency.py
mindai/engine/: axonal_delays.py  plasticity_core.py  spatial_topology_3d.py  temporal_windows.py
mindai/environment/: hearing_system.py
mindai/feels/: __init__.py  curves.py  feel.py  system.py
mindai/hardware/: backend_neuromorphic_lava.py
mindai/lifecycle/: __init__.py  circadian_rhythm.py  dream_injector.py  sleep_consolidation.py
mindai/neurochemistry/: neuromodulators.py
mindai/speech/: __init__.py  ear.py  vocal_apparatus.py  voice_id.py
mindai/worlds/: __init__.py  agent_world.py  base.py  remote_world.py  text_world.py
webgui/: __init__.py  __main__.py  active_brain.py  chats.py  cloud_bridge.py  models.py  server.py
(+37 files in other folders)
